# MCHap

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.rst  cli-assemble-help.txt  cli-atomize-help.txt  cli-call-exact-help.txt  cli-call-help.txt  cli-call-pedigree-help.txt  cli-find-snvs-help.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
applications/: haplokit-denovo.py  haplokit-haplograph.py
docs/: about.rst  assemble.rst  call.rst  cli-call-exact-help.txt  cli-call-help.txt  cli-find-snvs-help.txt
docs/example/: bi-parental-pedigree.ipynb  bi-parental.ipynb
haplohelper/: bam_io.py  bayesian.py  complexity.py  deterministic.py  inheritence.py  likelihood.py  mset.py  util.py  vcf_io.py
haplohelper/application/: denovo_assembly.py
haplohelper/assemble/: __init__.py  bayesian.py  bruteforce.py  classes.py  complexity.py  inheritence.py  likelihood.py  util.py
haplohelper/io/: __init__.py  bam.py  filter.py  genome.py  loci.py  util.py
haplohelper/step/: dosage.py  dosage_swap.py  mutate.py  mutation.py  recombination.py  replacement.py  structural.py  util.py
haplokit/: testing.py
haplokit/application/: cli.py  denovo.py  denovo_assembly.py  pedigraph.py  pedigree_plot.py
haplokit/assemble/: classes.py  complexity.py  inheritence.py  likelihood.py  util.py
haplokit/io/: bam.py  biotargetsfile.py  loci.py  util.py
mchap/: __init__.py  combinatorics.py  constant.py  jitutils.py  mset.py  testing.py  version.py
mchap/application/: arguments.py  assemble.py  atomize.py  baseclass.py  call.py  call_baseclass.py  call_exact.py  call_pedigree.py  cli.py  find_snvs.py  pedigraph.py
mchap/assemble/: __init__.py  arraymap.py  calling.py  classes.py  complexity.py  haplotype_calling.py  inheritence.py  likelihood.py  mcmc.py  mutation.py  prior.py  snpcalling.py  structural.py  tempering.py  util.py  utils.py
mchap/calling/: __init__.py  classes.py  exact.py  likelihood.py  mcmc.py  prior.py  utils.py
mchap/io/: __init__.py  bam.py  biotargetsfile.py  filter_alleles.py  loci.py  util.py
mchap/pedigree/: classes.py  likelihood.py  mcmc.py  prior.py  validation.py
mchap/tests/: test_application_arguments.py  (+11 more)
test/: test_allelic.py  test_application_assemble.py  test_application_denovo.py  test_denovo_assembly.py  test_mset.py  test_probabilistic.py
(+286 files in other folders)
