[project]
name = "mchap"
version = "0.11.1"
description = "Polyploid micro-haplotype assembly"
authors = [
  {name = "Tim Millar", email = "tim.millar@plantandfood.co.nz"}
]
license = "MIT"
readme = "README.rst"
keywords = ["biology", "bioinformatics", "genetics", "haplotypes", "polyploid"]
classifiers=[
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies=[
  "pandas>=2.0.0",
  "numpy>=2.1.0",
  "scipy>=1.0.0",
  "pysam>=0.21.0",
  "numba>=0.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
]
test = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/PlantandFoodResearch/MCHap"

[project.scripts]
mchap = "mchap.application.cli:main"

[tool.flake8]
ignore = ["E203", "E402", "E501", "E731", "W503"]

