[metadata]
name = mchap
author = Tim Millar
author_email = tim.millar@plantandfood.co.nz
license = MIT
description = Polyploid micro-haplotype assembly
long_description_content_type=text/x-rst
long_description =
    Polyploid micro-haplotype assembly  
url = https://github.com/PlantandFoodResearch/MCHap
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = mchap
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy
    pandas
    scipy
    numba
    pysam
    setuptools >= 41.2
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.entry_points]
console_scripts =
    mchap=mchap.application.cli:main

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
